--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@raycast/utils": "^1.5.2",
     "cheerio": "^1.0.0-rc.12",
     "fs": "^0.0.1-security",
+    "music-metadata": "^8.1.4",
     "node-fetch": "^3.3.1"
   },
   "devDependencies": {
